made modules for MarketingCampaignTypes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cinema-tycoon",
   "version": "1.0.0",
-  "description": "You can listen to changes in time, like a shift in hours, with following code:",
+  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
